@@ -18,6 +18,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
         The Riverbed AirPcap Product has reached End of Availability
         (EOA) as of December 31, 2017
       Make pcap_compile() error messages more uniform and consistent.
+      Validate remote capture source strings better.
     Packet filtering:
       Add support for Block Ack Req and Block Ack frame types (pull
         request #1039).
